<resources>
    <string name="app_name">Duff24</string>

    <string name="facebook_app_id" translatable="false">559518764223765</string>

    <string name="hello_world">Hola desde Duff 24!</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="la_carta">The Menu</string>

    <string name="comida">Foods</string>
    <string name="bebida">Drinks</string>
    <string name="hamburguesas">Burgers</string>
    <string name="texto_menu_mi_pedido">My order</string>
    <string name="vaciar_pedido">empty order</string>
    <string name="regresar_a_carta">The menu</string>
    <string name="text_total_pedido">Total: </string>
    <string name="text_btn_finalizar_pedido">Checkout</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="idioma">eng</string>
    <string name="title_activity_bebidas" translatable="false">BebidasActivity</string>
    <string name="title_activity_market" translatable="false">MarketActivity</string>
    <string name="title_activity_bitmap" translatable="false">Bitmap</string>
    <string name="title_activity_bitmap_decodificacion" translatable="false">BitmapDecodificacion</string>
    <string name="title_activity_pedido" translatable="false">PedidoActivity</string>
    <string name="title_activity_prueba" translatable="false">PruebaActivity</string>
    <string name="domicilio_incluido">(Delivery included </string>
    <string name="menaje_desea_vaciar_pedido">You want to empty the order?</string>
    <string name="mensaje_pedido_vacio">It has emptied the order.</string>
    <string name="mensaje_pedido_minimo">Minimum order value $10.000</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="txt_hint_correo_electronico">Email</string>
    <string name="text_autenticarse">Login</string>
    <string name="text_recuperar_clave">Forgot your password?</string>
    <string name="text_registrarse">Sign up</string>
    <string name="text_clave">Password</string>
    <string name="text_continuar_no_registrado">Continue as not registered</string>
    <string name="title_activity_registrarse" translatable="false">RegistrarseActivity</string>
    <string name="title_activity_noregistrado" translatable="false">NoregistradoActivity</string>
    <string name="txt_nombre">Name</string>
    <string name="txt_direccion">Address</string>
    <string name="txt_barrio">Neighborhood</string>
    <string name="txt_telefono">Phone</string>
    <string name="text_enviar_pedido">Send order</string>
    <string name="text_hint_observaciones">Observations (Optional) \ n example. bring change for a fifty.</string>
    <string name="campos_obligatorios">All fields are required unless the observations</string>
    <string name="todos_campos_obligatorios">All fields are required.</string>
    <string name="seleccione_forma_pago">Select a payment method</string>
    <string name="seleccione_ciudad">Select city</string>
    <string name="compruebe_conexion">Check your internet connection...</string>
    <string name="enviando_pedido">Sending order</string>
    <string name="por_favor_espere">please wait...</string>
    <string name="confirmacion_pedido_enviado">Your order has been sent, in a few minutes we will call you to confirm. ¡Thank you for your purchase...!</string>
    <string name="volver_cargar_vista">Refresh the view</string>
    <string name="txt_repetir_password">Repeat password</string>
    <string name="campo_nombre">Name minimum of three characters.</string>
    <string name="campo_correo">E-mail format invalid.</string>
    <string name="campo_password">Password between 4 and 20 characters.</string>
    <string name="campo_repetir_password">The passwords do not match.</string>
    <string name="campo_telefono">Minimum six phone numbers.</string>
    <string name="enviando_datos">Sending data</string>
    <string name="correo_ya_esta">Already registered email.</string>
    <string name="confirmar_registro">Thanks for signing .... can now login with your account.</string>
    <string name="campos_obligatorios_inicio_session">Enter email and password</string>
    <string name="campo_obligatorio_correo_inicio_session">Enter email.</string>
    <string name="campo_obligatorio_password_inicio_session" translatable="false">Enter password.</string>
    <string name="txt_cuenta">Account</string>
    <string name="txt_cerrar_sesion">Logout</string>
    <string name="txt_iniciando">Starting</string>
    <string name="txt_email_clave_incorrectos">email or password incorrect</string>
    <string name="txt_sesion_cerrada">Closed session</string>
    <string name="txt_cargando_vista">Loading view....</string>
    <string name="txt_seleccione_telefono">Select phone</string>
    <string name="txt_seleccione_direccion">Select address</string>
    <string name="txt_enviando">Sending...</string>
    <string name="txt_registro_exitoso">Successful registration</string>
    <string name="btn_facebook">Login with Facebook</string>
    <string name="txt_iniciando_con_facebook">Logging in with facebook</string>
    <string name="txt_contacto_sugerencias">Contact and suggestions</string>
    <string name="txt_cancelar">Cancel</string>
    <string name="txt_aceptar">Ok</string>
    <string name="txt_enviar">Send</string>
    <string name="txt_ingrese_correo">Enter email</string>
    <string name="confirmacion_envio_email">Request sent, check your email.</string>
    <string name="correo_no_se_encuentra">Email is not registered</string>






    <string-array name="forma_pago">
        <item>Select payment method</item>
        <item>Card</item>
        <item>Cash</item>
    </string-array>
    <string name="title_activity_pruebaconeccion" translatable="false">PruebaconeccionActivity</string>
    <string name="title_activity_introduccion" translatable="false">IntroduccionActivity</string>
    <string name="title_activity_registrado" translatable="false">RegistradoActivity</string>
    <string name="title_activity_probandofacebook" translatable="false">ProbandofacebookActivity</string>
    <string name="title_activity_contacto" translatable="false">ContactoActivity</string>
    <string name="txt_tu_opinion_importante">Your opinion is very important to us.</string>
    <string name="txt_mensaje_contacto">Message</string>
    <string name="txt_mensaje_enviado">Message sent</string>
    <string name="txt_mensaje_usuario_no_puede_ser_logueado">The registration email on facebook authentication.</string>
    <string name="title_activity_notificacion" translatable="false">NotificacionActivity</string>
    <string name="title_activity_pedidoencamino" translatable="false">PedidoencaminoActivity</string>
    <string name="txt_btn_agregar_dialog_descripcion">Add</string>
    <string name="txt_siningrediente_dialog_descripcion">Quit it:</string>
    <string name="txt_cebolla">Onion</string>
    <string name="txt_tomate">Tomato</string>
    <string name="txt_salsas">Sauces</string>
    <string name="cerrar_dialog_disminuir">Close</string>


</resources>
