<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="duff24.com.duff24.LoginActivity"
    android:background="@color/negro"
    >
    <ImageView
        android:id="@+id/flecha_atras"
        android:layout_width="@dimen/tam_ancho_flecha_atras"
        android:layout_height="@dimen/tam_flecha_atras"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_atras"

        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/flecha_atras"
        android:layout_marginBottom="@dimen/margin_small"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <ImageView
                android:id="@+id/imagen_login"
                android:layout_width="@dimen/tam_ancho_imagen_login"
                android:layout_height="@dimen/tam_alto_imagen_login"
                android:layout_marginTop="@dimen/margin_imagen_login"
                android:layout_marginBottom="@dimen/margin_imagen_login"
                android:src="@drawable/gorrita_grande"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"

                />
            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_caja_texto"
                android:layout_below="@id/imagen_login"
                android:textColor="@color/blanco"
                android:hint="@string/txt_hint_correo_electronico"
                android:textColorHint="@color/gris"
                android:layout_marginTop="@dimen/margin_text_correo_electronico"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/size_text_caja_texto"
                android:background="@drawable/bordes_redondeados_pequenos"
                android:gravity="center"
                android:ellipsize="end"
                android:singleLine="true"
                />

            <ImageView
                android:layout_width="@dimen/tam_icono_caja_text"
                android:layout_height="@dimen/tam_icono_caja_text"
                android:src="@mipmap/ic_user"
                android:layout_alignBottom="@id/txt_email"
                android:layout_alignRight="@id/txt_email"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_caja_texto"
                android:textColor="@color/blanco"
                android:hint="@string/text_clave"
                android:textColorHint="@color/gris"
                android:layout_marginTop="@dimen/margin_top_password"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:inputType="textPassword"
                android:textSize="@dimen/size_text_caja_texto"
                android:background="@drawable/bordes_redondeados_pequenos"
                android:gravity="center"
                android:layout_below="@id/txt_email"
                android:ellipsize="end"
                android:singleLine="true"
                />

            <ImageView
                android:layout_width="@dimen/tam_icono_caja_text"
                android:layout_height="@dimen/tam_icono_caja_text"
                android:src="@android:drawable/ic_lock_idle_lock"
                android:layout_alignBottom="@id/txt_password"
                android:layout_alignRight="@id/txt_password"/>

            <Button
                android:id="@+id/btninciarsesion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_btn"
                android:text="@string/text_autenticarse"
                android:textColor="@color/blanco"
                android:textSize="@dimen/size_text_caja_texto"
                android:layout_marginTop="@dimen/margin_top_btn"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@drawable/bordes_redondos_pequno_fondo_rojo"
                android:layout_below="@id/txt_password"
                />

            <ImageView
                android:layout_width="@dimen/tam_icono_caja_text"
                android:layout_height="@dimen/tam_icono_caja_text"
                android:src="@mipmap/ic_ok"
                android:layout_alignBottom="@id/btninciarsesion"
                android:layout_alignRight="@id/btninciarsesion"/>
            <TextView
                android:id="@+id/recuperarClave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_caja_texto"
                android:text="@string/text_recuperar_clave"
                android:gravity="center"
                android:textSize="@dimen/size_text_caja_texto"
                android:textColor="@color/rojo"
                android:layout_marginTop="@dimen/margin_top_link"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_below="@id/btninciarsesion"
                />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_btn"
                android:text="@string/text_registrarse"
                android:textColor="@color/blanco"
                android:textSize="@dimen/size_text_caja_texto"
                android:layout_marginTop="@dimen/margin_top_btn"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@drawable/bordes_redondos_pequno_fondo_rojo"
                android:layout_below="@id/recuperarClave"
                />

            <ImageView
                android:layout_width="@dimen/tam_icono_caja_text"
                android:layout_height="@dimen/tam_icono_caja_text"
                android:src="@mipmap/ic_add_user"
                android:layout_alignBottom="@id/btnRegistrarse"
                android:layout_alignRight="@id/btnRegistrarse"/>
            <Button
                android:id="@+id/btn_continuar_no_registrado"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_btn"
                android:text="@string/text_continuar_no_registrado"
                android:textSize="@dimen/size_text_btn_continuar_no_registrado"
                android:textColor="@color/blanco"
                android:layout_below="@id/btnRegistrarse"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_top_link"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="@drawable/bordes_redondos_pequno_fondo_rojo"
                />
            <ImageView
                android:layout_width="@dimen/tam_icono_caja_text"
                android:layout_height="@dimen/tam_icono_caja_text"
                android:src="@mipmap/ic_continuar"
                android:layout_alignBottom="@id/btn_continuar_no_registrado"
                android:layout_alignRight="@id/btn_continuar_no_registrado"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
