<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="duff24.com.duff24.PedidoActivity">


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <VideoView
                android:id="@+id/videofondo"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bordes_redondos_dialog_descripcion_producto"
                />




                <ImageView
                    android:id="@+id/btn_menu_principal"
                    android:layout_width="@dimen/tamano_icono_menu_principal"
                    android:layout_height="@dimen/tamano_icono_menu_principal"
                    android:src="@mipmap/ic_menu_principal"
                    android:layout_margin="@dimen/margin_small"
                    />
                <ImageView
                    android:id="@+id/flecha_atras"
                    android:layout_width="@dimen/tam_ancho_flecha_atras"
                    android:layout_height="@dimen/tam_flecha_atras"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_atras"
                    />

                <TextView
                    android:id="@+id/txttitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_menu_mi_pedido"
                    android:textSize="@dimen/tam_titulo_vista"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/txt_total_pedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txttitulo"
                    android:text="@string/text_total_pedido"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/tam_text_total_pedido"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"

                    />
                <TextView
                    android:id="@+id/txt_domicilio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/domicilio_incluido"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/size_tex_domicilio_incluido"
                    android:layout_below="@id/txt_total_pedido"
                    />
                <TextView
                    android:id="@+id/txt_valor_total_pedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tam_text_total_pedido"
                    android:textColor="@color/rojo"
                    android:text="$0"
                    android:layout_below="@id/txttitulo"
                    android:layout_marginTop="@dimen/margin_veinte_dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    />
                <Button
                    android:id="@+id/btn_finalizar_pedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/text_btn_finalizar_pedido"
                    android:textColor="@color/blanco"
                    android:background="@drawable/bordes_superiores_redondos_fondo_rojo_transparente"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"

                    />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/grid_productos_pedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_domicilio"
                android:layout_above="@id/btn_finalizar_pedido"
                android:cacheColorHint="@color/transparente"
                android:scrollbars="none"
                android:layout_margin="@dimen/margin_small"

                >
            </android.support.v7.widget.RecyclerView>



        </RelativeLayout>

        <android.support.design.widget.NavigationView

            android:id="@+id/nav"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/pedido_nav"
            android:background="#BF000000"
            app:itemIconTint="#ffffff"
            app:headerLayout="@layout/navigation_header"
            app:itemTextAppearance="@style/NavDrawerTextStyle"
            />


    </android.support.v4.widget.DrawerLayout>


</RelativeLayout>
